# benchmark_orm

./: Cargo.toml
benches/: bench_main.rs
benches/benchmarks/: bench_1.rs  bench_2.rs  dysql_sqlx.rs  mod.rs  rbatis.rs  seaorm.rs  sqlx.rs  tokio_postgres.rs
rbitis/: Cargo.toml
sea-orm/: Cargo.toml
src/: main.rs
src/entities/: mod.rs  prelude.rs  test_user.rs
tokio-postgres/: Cargo.toml
