[package]
name = "benchmark_orm"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.4", features = ["async_tokio", "async", "async_futures"] }
dysql = "0.4"
dysql-macro = { path = "/home/evan/workspace/dysql-project/dysql-macro", features = ["sqlx"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres"] }
tokio = { version = "1.0", features = ["full"] }
ramhorns = "0.14"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
deadpool-postgres = "0.10"
sea-orm = { version = "0.10", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }

serde = { version = "1", features = ["derive"] }
rbs = { version = "0.1"}
rbatis = { version = "4.0"}
rbdc-pg={version="0.1"}

[[bench]]
name = "bench_main"
harness = false